# optimized-memory-mcp-serverv2

./: .aider.conf.yml  .flake8  .gitignore  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  tasks.md
.prompts/: architect-tasks.md  enhanced-mcp-server-tasks.md  file-size-guidelines.md  repo-exploration-template.md
.prompts/context/: enhanced-mcp-server-tasksv2.md
.prompts/docs/: mcp-server-conventions.md
.prompts/rules/: bug-fix-template.xml  code-generation-guidelines.xml  code-review-template.md  fastmcp-rules.xml  file-size-guidelines.xml  no-async.xml  no-fastapi.xml  repo-exploration.md  repo-exploration.xml  task-generation.md  task-generation.xml
.prompts/tasks/: architect-tasks.md  engineer-tasks.md  fastmcp_patching_tasks.md
.prompts/user_input/: ai_log.txt  pytest_short_error_summary.txt  user_observations.md
docs/: API.md  API_ENDPOINTS.md  CONFIGURATION.md  DATABASE_SCHEMA.md  DEVELOPMENT.md  ENVIRONMENT_SETUP.md  EXAMPLES.md  INSTALLATION.md  MCP_USAGE.md  TROUBLESHOOTING.md
migrations/: env.py  script.py.mako
migrations/versions/: initial_schema.py
src/: __init__.py  config.py  main.py  server.py
src/api/: __init__.py  analysis.py  ansible.py  compatibility.py  context.py  deprecation.py  entities.py  observations.py  providers.py  relationships.py  search.py  validation.py  versions.py
src/db/: __init__.py  connection.py  init_db.py
src/resources/: __init__.py  ansible.py  entities.py  observations.py  providers.py  relationships.py  search.py  versions.py
tests/: conftest.py
(+31 files in other folders)
